Add php and html input conditions

--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
                         <div class="form-row">
                             <div class="form-group col-md-6">
                                 <label for="inputCity">Total Amount</label>
-                                <input type="text" class="form-control" id="total-amount" class="total-amount" name="total-amount">
+                                <input type="text" class="form-control" id="total-amount" class="total-amount" name="total-amount" required>
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputCity">Base Line</label>
-                                <input type="text" class="form-control" id="base-line" class="base-line" name="base-line">
+                                <input type="text" class="form-control" id="base-line" class="base-line" name="base-line" required>
                             </div>
                         </div>
                         <div class="form-row input-daterange">
