--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 <div class="col-md-5">
                     <div class="app-data-container" id="app-data-result">
                         <h3 class="text-center text-success"> 
-                            Result
+                            Results
                         </h3>
                         <table class="table">
                             <thead>
@@ -70,16 +70,7 @@
                             </thead>
                             <tbody>
                                 <tr>
-                                    <th>1</th>
-                                    <td>Mark</td>
-                                </tr>
-                                <tr>
-                                    <th>2</th>
-                                    <td>Jacob</td>
-                                </tr>
-                                <tr>
-                                    <th>3</th>
-                                    <td>Larry</td>
+                                    <td> No Results Yet </td>
                                 </tr>
                             </tbody>
                         </table>
