Fix negative amounts

--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@
                         <div class="form-row input-daterange">
                             <div class="form-group col-md-6">
                                 <label for="inputCity">Start date</label>
-                                <input type="text" class="form-control" id="start-date" class="start-date" value="2019-04-05" name="start-date">
+                                <input type="text" class="form-control" id="start-date" class="start-date" name="start-date" value="2019-04-13">
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputCity">End date</label>
-                                <input type="text" class="form-control" id="end-date" class="end-date" name="end-date" value="2019-04-19">
+                                <input type="text" class="form-control" id="end-date" class="end-date" name="end-date" value="2019-04-17">
                             </div>
                         </div>
                             
