add base line ranger betwen 0 and 100

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                             </div>
                             <div class="form-group col-md-6">
                                 <label for="inputCity">Base line</label>
-                                <input type="number" class="form-control" id="base-line" class="base-line" name="base-line" required>
+                                <input type="number" class="form-control" id="base-line" class="base-line" name="base-line" min="0" max="100" required>
                             </div>
                         </div>
                         <div class="form-row input-daterange">
