--- a/index.html
+++ b/index.html
@@ -16,13 +16,11 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
-                    <h3 class="text-center"> Application to distribute a total amount randomly by days</h3>
+                    <h3 class="text-center"> Application to distribute a total amount randomly by days </h3>
                 </div>
                 <div class="col-md-12">
                     <div class="error-container">
-                        <div class="alert alert-danger hide-block" id="app-error-container" role="alert">
-                            A simple danger alert with <a href="#" class="alert-link">an example link</a>. Give it a click if you like.
-                        </div>
+                        <div class="alert alert-danger hide-block" id="app-error-container" role="alert"></div>
                     </div>
                 </div>
                 
@@ -36,7 +34,7 @@
                                 <input type="number" class="form-control" id="total-amount" class="total-amount" name="total-amount" required>
                             </div>
                             <div class="form-group col-md-6">
-                                <label for="inputCity">Base line</label>
+                                <label for="inputCity">Base line ( 0 - 100 )</label>
                                 <input type="number" class="form-control" id="base-line" class="base-line" name="base-line" min="0" max="100" required>
                             </div>
                         </div>
